--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <div id="main-container" class="container">
         <section class="main-section">
             <h1>About Me</h1>
-            </img src="">
-            <p></p>
-            <p></p>        
+            </img src="git-hub-cat.png" class="auth-image">
+            <p>bla bla</p>
+            <p>bla bla</p>        
         </section>
 
         <section>
             <div>
                 <h2>Connect With Me</h2>
-                <a></a>
+                <a href="https://github.com/0342979"><img src="git-hub-cat.png"></a>
             </div>
         </section>
     </div>
