im missing a lot

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>About | Miguel Nunez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
 </head>
 <body>
     <header id="masthead">
         <div class="container">
-            <a>Miguel Nunez</a>
+            <a href="index.html">Miguel Nunez</a>
             <nav>
-                <a>About</a>
-                <a>Portfolio</a>
-                <a>Contact</a>
+                <a href="index.html">About</a>
+                <a href="potfolio.html">Portfolio</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -24,8 +24,8 @@
         <section class="main-section">
             <h1>About Me</h1>
             </img src="git-hub-cat.png" class="auth-image">
-            <p>bla bla</p>
-            <p>bla bla</p>        
+            <p>Yo</p>
+            <p>A!</p>        
         </section>
 
         <section>
@@ -36,5 +36,10 @@
         </section>
     </div>
 
+    <footer>
+        <div>
+            Copyright &copy; 2018 Miguel Nunez
+        </div>
+    </footer>
 </body>
 </html>      
