--- a/portfolio.html
+++ b/portfolio.html
@@ -18,3 +18,18 @@
             </nav>
         </div>
     </header>
+
+    <div >
+        <section>
+            <h1>Portfolio</h1>
+
+            <div class="work">
+                <img src="">
+            </div>
+        </section>
+    </div>
+
+
+
+ </body>
+ </html>
