i didnt fail hahahahahahha

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,35 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
+
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Portfolio | Miguel Nunez</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+
 </head>
 <body>
+
     <header id="masthead">
         <div class="container">
-            <a href="index.html">Miguel Nunez</a>
+            <a href="index.html" id="nameArt">Miguel Nunez</a>
             <nav>
                 <a href="index.html">About</a>
-                <a href="potfolio.html">Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
 
-    <div >
-        <section>
-            <h1>Portfolio</h1>
+    <div id="main-container" class="container">
 
+        <section class="main-section">
+            <h1>Portfolio</h1>
             <div class="work">
-                <img src="">
+                <a href=""5 target="_blank">
+                <img src="opitem.jpg"> 
+                <h3>Favorite Things Website</h3>
+                </a>
             </div>
         </section>
+
+        <section class="sidebar">
+            <div>
+                <h2>Connect With Me</h2>
+                <a href="https://github.com/0342979" target="_blank">
+                    <img src="git-hub-cat.png" class="social">
+                </a>
+            </div>
+        </section>
+
     </div>
 
+    <footer>
+        <div>
+            Copyright &copy; 2018 Miguel Nunez
+        </div>
+    </footer>
 
+</body>
+</html>
 
  </body>
  </html>
